Fixes and improvements

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,10 +23,15 @@
     "48": "img/icon-48.png",
     "128": "img/icon-128.png"
   },
+  "web_accessible_resources": [
+    "img/icon-16.png",
+    "img/icon-48.png",
+    "img/icon-128.png"
+  ],
   "permissions": [
     "notifications",
     "storage",
-    "https://www.upwork.com/"
+    "*://*.upwork.com/*"
   ],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
